--- a/disney-clone/src/index.css
+++ b/disney-clone/src/index.css
@@ -4,9 +4,7 @@ html{
     scroll-behavior: smooth;
 }
 
-*{
-    box-sizing: border-box;
-}
+*{ box-sizing: border-box;}
 
 body{
     background-color: #040714;
